[gd_scene load_steps=2 format=3 uid="uid://cy7w4k9n2m5p8"]

[ext_resource type="Script" path="res://src/ui/screens/meta_upgrade_screen/MetaUpgradeScreen.gd" id="1_meta_upgrade"]

[node name="MetaUpgradeScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_meta_upgrade")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 0.95)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="TopBar" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="VBox/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "永久升级"
horizontal_alignment = 1

[node name="GoldLabel" type="Label" parent="VBox/TopBar"]
layout_mode = 2
text = "金币: 0"
horizontal_alignment = 2

[node name="BackButton" type="Button" parent="VBox/TopBar"]
layout_mode = 2
text = "返回"

[node name="ScrollContainer" type="ScrollContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="UpgradesContainer" type="VBoxContainer" parent="VBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3